force-app/main/default/src/objects/PJN_Enrollment_Field_Set__mdt/PJN_Enrollment_Field_Set__mdt.object-meta.xml
<CustomObject>
    <description>App: Patient Journey Navigator
Impacted Functionality: Enrollment Wizard
Purpose: Define field attributes for fields being used in the Enrollment Wizard Record Form. This is step 5 in setting up the Enrollment Wizard.
Metadata Relationship(s): Enrollment Wizard Record Form
Created by Mavens: Yes</description>
    <label>Enrollment Field Set</label>
    <pluralLabel>Enrollment Field Sets</pluralLabel>
</CustomObject>