force-app/main/default/src/objects/PJN_Enrollment_Field_Set__mdt/fields/PJN_Enrollment_Wizard_Record_Form__c.field-meta.xml
<CustomField>
    <fullName>PJN_Enrollment_Wizard_Record_Form__c</fullName>
    <label>Enrollment Wizard Record Form</label>
    <referenceTo>PJN_Enrollment_Wizard_Record_Form__mdt</referenceTo>
    <relationshipLabel>Enrollment Field Sets</relationshipLabel>
    <relationshipName>PJN_Enrollment_Field_Sets</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>