force-app/main/default/src/objects/PJN_Enrollment_Field_Set__mdt/fields/PJN_Is_Required__c.field-meta.xml
<CustomField>
    <fullName>PJN_Is_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required</label>
    <type>Checkbox</type>
</CustomField>